# RISCV-Interpreter

./: .gitignore  Cargo.toml  Docs.md  Makefile.toml  README.md  TODO.md  build.rs  example.c  test.json  test.py  tests.json
src/: abi.rs  hardware.rs  hardware_setup.rs  lib.rs  main.rs  matching.md  riscv_spec.rs
src/assembler/: asm.lalrpop  asm.rs  assembler.rs  ast.rs  mod.rs
src/assembler/assembler/: asm.rs
test_gen/: assembler.py  convert.py  pyproject.toml  tests.py
test_gen/assembler_tests/: test_assembler.py
test_gen/assembly_files/: add.s
test_gen/src/: lib.rs
test_gen/tests/: test_assembler.py
test_gen_old/: pyproject.toml
tests/: arithmetic_tests.rs  tests.json
virtual_machine/: Cargo.toml  build.rs
virtual_machine/src/: ast.rs  grammar.lalprop  lib.rs
