[env]
CARGO_MAKE_EXTEND_WORKSPACE_MAKEFILE = true

[package]
name = "toast_interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.2"

[dependencies]
bytemuck = "1.14.0"
byteorder = "1.5.0"
itertools = "0.12.1"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
phf = { version = "0.11.2", features = ["macros"] }
serde = "1.0.193"
serde_json = "1.0.108"
