workspace = { members = ["test_gen", "virtual_machine"] }
[env]
CARGO_MAKE_EXTEND_WORKSPACE_MAKEFILE = true

[package]
name = "toast_interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.2"

[dependencies]
bytemuck = "1.14.0"
byteorder = "1.5.0"
itertools = "0.12.1"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
quote = "1.0.35"
serde = "1.0.193"
serde_json = "1.0.108"
syn = "2.0.52"
test_gen = { path = "./test_gen" }
virtual_machine = { path = "./virtual_machine" }
