[package]
name = "virtual_machine"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.2"

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = "2.0.52"


[lib]
proc-macro = true
